[project]
name = "titiler"
description = "A modern dynamic tile server built on top of FastAPI and Rasterio/GDAL."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
keywords = [
    "COG",
    "STAC",
    "MosaicJSON",
    "Fastapi",
    "Dynamic tile server",
    "GDAL",
    "Rasterio",
    "OGC",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]
version="2.0.2"
dependencies = [
    "titiler-core",
    "titiler-xarray",
    "titiler-extensions",
    "titiler-mosaic[mosaicjson]",
    "titiler-application",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "obstore",
    "zarr>=3,<4.0",
    "h5netcdf",
    "h5py",
    "fsspec",
    "s3fs>=2025.2.0",
    "aiohttp",
    "requests",
    "pystac[validation]>=1.0.0,<2.0.0",
    "brotlipy",
    "boto3",
    "owslib",
    "pre-commit",
    "IPython",
    "jupyter",
    "matplotlib",
    "folium",
]
telemetry = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-exporter-otlp",
]
docs = [
    "black>=23.10.1",
    "mkdocs>=1.4.3",
    "mkdocs-jupyter>=0.24.5",
    "mkdocs-material[imaging]>=9.5",
    "griffe-inherited-docstrings>=1.0.0",
    "mkdocstrings[python]>=0.25.1",
]
server = [
    "uvicorn",
]

[project.urls]
Homepage = 'https://developmentseed.org/titiler/'
Documentation = "https://developmentseed.org/titiler/"
Issues = "https://github.com/developmentseed/titiler/issues"
Source = "https://github.com/developmentseed/titiler"
Changelog = "https://developmentseed.org/titiler/release-notes/"

[tool.uv]
package = false

[tool.uv.sources]
titiler-core = { workspace = true }
titiler-extensions = { workspace = true }
titiler-mosaic = { workspace = true }
titiler-application = { workspace = true }
titiler-xarray = { workspace = true }

[tool.uv.workspace]
members = [
  "src/titiler/*"
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["titiler"]
known_third_party = [
    "rasterio",
    "morecantile",
    "rio_tiler",
    "cogeo_mosaic",
    "geojson_pydantic",
    "starlette_cramjam",
]
default_section = "THIRDPARTY"

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]
exclude = [
    "*.ipynb"
]

[tool.mypy]
no_implicit_optional = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::rasterio.errors.NotGeoreferencedWarning",
]

[tool.commitizen]
name = "cz_conventional_commits"
