[project]
name = "titiler-application"
description = "A modern dynamic tile server built on top of FastAPI and Rasterio/GDAL."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
license = {text = "MIT"}
keywords = [
    "COG",
    "STAC",
    "MosaicJSON",
    "Fastapi",
    "Dynamic tile server",
    "GDAL",
    "Rasterio",
    "OGC",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "titiler-core[telemetry]==1.0.1",
    "titiler-extensions[cogeo,stac]==1.0.1",
    "titiler-mosaic[mosaicjson]==1.0.1",
    "starlette-cramjam>=0.4,<0.6",
    "pydantic-settings~=2.0",
]

[project.optional-dependencies]
server = [
    "uvicorn[standard]>=0.12.0",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "brotlipy",
    "boto3",
]

[project.urls]
Homepage = "https://developmentseed.org/titiler/"
Documentation = "https://developmentseed.org/titiler/"
Issues = "https://github.com/developmentseed/titiler/issues"
Source = "https://github.com/developmentseed/titiler"
Changelog = "https://developmentseed.org/titiler/release-notes/"

[tool.hatch.version]
path = "titiler/application/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["titiler"]

[tool.hatch.build.targets.wheel]
only-include = ["titiler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
