[project]
name = "titiler-core"
description = "A modern dynamic tile server built on top of FastAPI and Rasterio/GDAL."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
license = {text = "MIT"}
keywords = [
    "COG",
    "STAC",
    "MosaicJSON",
    "Fastapi",
    "Dynamic tile server",
    "GDAL",
    "Rasterio",
    "OGC",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "fastapi>=0.108.0",
    "geojson-pydantic>=1.1.2,<3.0",
    "jinja2>=2.11.2,<4.0.0",
    "numpy",
    "pydantic~=2.0",
    "rasterio",
    "rio-tiler>=8.0,<9.0",
    "morecantile",
    "simplejson",
    "typing_extensions>=4.6.1",
]

[project.optional-dependencies]
telemetry = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-exporter-otlp",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
]

[project.urls]
Homepage = "https://developmentseed.org/titiler/"
Documentation = "https://developmentseed.org/titiler/"
Issues = "https://github.com/developmentseed/titiler/issues"
Source = "https://github.com/developmentseed/titiler"
Changelog = "https://developmentseed.org/titiler/release-notes/"

[tool.hatch.version]
path = "titiler/core/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["titiler"]

[tool.hatch.build.targets.wheel]
only-include = ["titiler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
