[project]
name = "titiler-extensions"
description = "Extensions for TiTiler Factories."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
license = {text = "MIT"}
keywords = [
    "COG",
    "STAC",
    "MosaicJSON",
    "Fastapi",
    "Dynamic tile server",
    "GDAL",
    "Rasterio",
    "OGC",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
packages = [
  { include = "titiler.*" },
]
dependencies = [
    "titiler-core==0.24.2"
]

[project.optional-dependencies]
cogeo = [
    "rio-cogeo>=5.0,<6.0",
]
stac = [
    "rio-stac>=0.12,<0.13",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "pystac[validation]>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://developmentseed.org/titiler/"
Documentation = "https://developmentseed.org/titiler/"
Issues = "https://github.com/developmentseed/titiler/issues"
Source = "https://github.com/developmentseed/titiler"
Changelog = "https://developmentseed.org/titiler/release-notes/"

[tool.hatch.version]
path = "titiler/extensions/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests/"]

[tool.hatch.build.targets.wheel]
only-include = ["titiler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"