[project]
name = "titiler"
description = "A modern dynamic tile server built on top of FastAPI and Rasterio/GDAL."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
keywords = [
    "COG",
    "Cloud Optimized GeoTIFF",
    "STAC",
    "Spatio Temporal Asset Catalog",
    "FastAPI",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "titiler.core==0.5.1",
    "titiler.mosaic==0.5.1",
    "titiler.application==0.5.1",
]

[project.urls]
Source = "https://github.com/developmentseed/titiler"
Documentation = "https://developmentseed.org/titiler/"

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"
