[project]
name = "titiler-mosaic"
description = "cogeo-mosaic (MosaicJSON) plugin for TiTiler."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
license = {text = "MIT"}
keywords = [
    "COG",
    "STAC",
    "MosaicJSON",
    "Fastapi",
    "Dynamic tile server",
    "GDAL",
    "Rasterio",
    "OGC",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "titiler.core==0.22.3",
    "cogeo-mosaic>=8.0,<9.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "cogeo-mosaic>=8.2,<9.0",
]

[project.urls]
Homepage = "https://developmentseed.org/titiler/"
Documentation = "https://developmentseed.org/titiler/"
Issues = "https://github.com/developmentseed/titiler/issues"
Source = "https://github.com/developmentseed/titiler"
Changelog = "https://developmentseed.org/titiler/release-notes/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "titiler/mosaic/__init__.py"

[tool.pdm.build]
includes = ["titiler/mosaic"]
excludes = ["tests/", "**/.mypy_cache", "**/.DS_Store"]
