[project]
name = "titiler-mosaic"
description = "cogeo-mosaic (MosaicJSON) plugin for TiTiler."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
license = {text = "MIT"}
keywords = [
    "COG",
    "STAC",
    "MosaicJSON",
    "Fastapi",
    "Dynamic tile server",
    "GDAL",
    "Rasterio",
    "OGC",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "titiler-core==1.0.1",
]

[project.optional-dependencies]
mosaicjson = [
    "cogeo-mosaic>=9.0,<10.0",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
]

[project.urls]
Homepage = "https://developmentseed.org/titiler/"
Documentation = "https://developmentseed.org/titiler/"
Issues = "https://github.com/developmentseed/titiler/issues"
Source = "https://github.com/developmentseed/titiler"
Changelog = "https://developmentseed.org/titiler/release-notes/"

[tool.hatch.version]
path = "titiler/mosaic/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["titiler"]

[tool.hatch.build.targets.wheel]
only-include = ["titiler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
