[project]
name = "titiler-xarray"
description = "Xarray plugin for TiTiler."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
    {name = "Aimee Barciauskas", email = "aimee@developmentseed.com"},
]
license = {text = "MIT"}
keywords = [
    "TiTiler",
    "Xarray",
    "Zarr",
    "NetCDF",
    "HDF",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "titiler.core==0.20.0",
    "rio-tiler>=7.2,<8.0",
    "xarray",
    "rioxarray",
]

[project.optional-dependencies]
full = [
    "zarr",
    "h5netcdf",
    "fsspec",
    "s3fs",
    "aiohttp",
    "gcsfs",
]
minimal = [
    "zarr",
    "h5netcdf",
    "fsspec",
]
gcs = [
    "gcsfs",
]
s3 = [
    "s3fs",
]
http = [
    "aiohttp",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "zarr",
    "h5netcdf",
    "fsspec",
]

[project.urls]
Homepage = "https://developmentseed.org/titiler/"
Documentation = "https://developmentseed.org/titiler/"
Issues = "https://github.com/developmentseed/titiler/issues"
Source = "https://github.com/developmentseed/titiler"
Changelog = "https://developmentseed.org/titiler/release-notes/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "titiler/xarray/__init__.py"

[tool.pdm.build]
includes = ["titiler/xarray"]
excludes = ["tests/", "**/.mypy_cache", "**/.DS_Store"]
